jackie edits in intro

--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -51,7 +51,7 @@
 %%                                                 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%       Define student-specific info
-\SetTitle{\huge{Title}}%
+\SetTitle{\huge{Molecular Dynamics of the disordered $\gamma$-tubulin carboxyl terminus}}%
 \SetAuthor{Carlos G. Oliver}%
 \SetDegreeType{Master of Science}%
 \SetDepartment{Department of Biology}%
