--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -409,3 +409,181 @@
   year={2001},
   publisher={ACS Publications}
 }
+@article{jorgensen1988opls,
+  title={The OPLS [optimized potentials for liquid simulations] potential functions for proteins, energy minimizations for crystals of cyclic peptides and crambin},
+  author={Jorgensen, William L and Tirado-Rives, Julian},
+  journal={Journal of the American Chemical Society},
+  volume={110},
+  number={6},
+  pages={1657--1666},
+  year={1988},
+  publisher={ACS Publications}
+}
+
+@article{kendrew1958three,
+  title={A three-dimensional model of the myoglobin molecule obtained by x-ray analysis},
+  author={Kendrew, John C and Bodo, G and Dintzis, Howard M and Parrish, RG and Wyckoff, Harold and Phillips, David C},
+  journal={Nature},
+  volume={181},
+  number={4610},
+  pages={662--666},
+  year={1958}
+}
+
+@article{bell2002dna,
+  title={DNA replication in eukaryotic cells},
+  author={Bell, Stephen P and Dutta, Anindya},
+  journal={Annual review of biochemistry},
+  volume={71},
+  number={1},
+  pages={333--374},
+  year={2002},
+  publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
+}
+@article{wuthrich2001way,
+  title={The way to NMR structures of proteins},
+  author={W{\"u}thrich, Kurt},
+  journal={Nat Struct Biol},
+  volume={8},
+  number={11},
+  pages={923--5},
+  year={2001}
+}
+
+@inproceedings{romero1998thousands,
+  title={Thousands of proteins likely to have long disordered regions},
+  author={Romero, Pedro and Obradovic, ZORAN and Kissinger, Charles R and Villafranca, J Ernest and Garner, ETHAN and Guilliot, STEPHEN and Dunker, A Keith},
+  booktitle={Pac Symp Biocomput},
+  volume={3},
+  pages={437--448},
+  year={1998}
+}
+
+@article{uversky2008intrinsically,
+  title={Intrinsically disordered proteins in human diseases: introducing the D2 concept},
+  author={Uversky, Vladimir N and Oldfield, Christopher J and Dunker, A Keith},
+  journal={Annu. Rev. Biophys.},
+  volume={37},
+  pages={215--246},
+  year={2008},
+  publisher={Annual Reviews}
+}
+
+@article{hegyi1999relationship,
+  title={The relationship between protein structure and function: a comprehensive survey with application to the yeast genome},
+  author={Hegyi, Hedi and Gerstein, Mark},
+  journal={Journal of molecular biology},
+  volume={288},
+  number={1},
+  pages={147--164},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{putnam2007x,
+  title={X-ray solution scattering (SAXS) combined with crystallography and computation: defining accurate macromolecular structures, conformations and assemblies in solution},
+  author={Putnam, Christopher D and Hammel, Michal and Hura, Greg L and Tainer, John A},
+  journal={Quarterly reviews of biophysics},
+  volume={40},
+  number={03},
+  pages={191--285},
+  year={2007},
+  publisher={Cambridge Univ Press}
+}
+
+@article{van1990effect,
+  title={Effect of phosphorylation on hydrogen-bonding interactions of the active site histidine of the phosphocarrier protein HPr of the phosphoenolpyruvate-dependent phosphotransferase system determined by nitrogen-15 NMR spectroscopy},
+  author={Van Dijk, Alard A and De Lange, Liesbeth CM and Bachovchin, William W and Robillard, George T},
+  journal={Biochemistry},
+  volume={29},
+  number={35},
+  pages={8164--8171},
+  year={1990},
+  publisher={ACS Publications}
+}
+
+@article{kern1999structure,
+  title={Structure of a transiently phosphorylated switch in bacterial signal transduction},
+  author={Kern, Dorothee and Volkman, Brian F and Luginbu{\`E}hl, Peter and Nohaile, Michael J and Kustu, Sydney and Wemmer, David E},
+  journal={Nature},
+  volume={402},
+  number={6764},
+  pages={894--898},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
+@article{ramelot2001phosphorylation,
+  title={Phosphorylation-induced structural changes in the amyloid precursor protein cytoplasmic tail detected by NMR},
+  author={Ramelot, Theresa A and Nicholson, Linda K},
+  journal={Journal of molecular biology},
+  volume={307},
+  number={3},
+  pages={871--884},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{oxley2008integrin,
+  title={An integrin phosphorylation switch the effect of $\beta$3 integrin tail phosphorylation on dok1 and talin binding},
+  author={Oxley, Camilla L and Anthis, Nicholas J and Lowe, Edward D and Vakonakis, Ioannis and Campbell, Iain D and Wegener, L},
+  journal={Journal of Biological Chemistry},
+  volume={283},
+  number={9},
+  pages={5420--5426},
+  year={2008},
+  publisher={ASBMB}
+}
+
+@article{iakoucheva2004importance,
+  title={The importance of intrinsic disorder for protein phosphorylation},
+  author={Iakoucheva, Lilia M and Radivojac, Predrag and Brown, Celeste J and O’Connor, Timothy R and Sikes, Jason G and Obradovic, Zoran and Dunker, A Keith},
+  journal={Nucleic acids research},
+  volume={32},
+  number={3},
+  pages={1037--1049},
+  year={2004},
+  publisher={Oxford Univ Press}
+}
+
+@article{nash2001multisite,
+  title={Multisite phosphorylation of a CDK inhibitor sets a threshold for the onset of DNA replication},
+  author={Nash, Piers and Tang, Xiaojing and Orlicky, Stephen and Chen, Qinghua and Gertler, Frank B and Mendenhall, Michael D and Sicheri, Frank and Pawson, Tony and Tyers, Mike},
+  journal={Nature},
+  volume={414},
+  number={6863},
+  pages={514--521},
+  year={2001},
+  publisher={Nature Publishing Group}
+}
+
+@article{kline2004mitotic,
+  title={Mitotic spindle assembly and chromosome segregation: refocusing on microtubule dynamics},
+  author={Kline-Smith, Susan L and Walczak, Claire E},
+  journal={Molecular cell},
+  volume={15},
+  number={3},
+  pages={317--327},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{cuschieri2006gamma,
+  title={$\gamma$-Tubulin Is Required for Proper Recruitment and Assembly of Kar9--Bim1 Complexes in Budding Yeast},
+  author={Cuschieri, Lara and Miller, Rita and Vogel, Jackie},
+  journal={Molecular biology of the cell},
+  volume={17},
+  number={10},
+  pages={4420--4434},
+  year={2006},
+  publisher={Am Soc Cell Biol}
+}
+
+@inproceedings{nazarova2013cdk1,
+  title={Cdk1 phosphorylation of gamma-tubulin controls microtubule pairing and overlap},
+  author={Nazarova, E and Ear, P and Hall, C and OToole, E and Kaitna, S and Booth, M and Abd-Rabbo, D and Moreno, J and Chen, D and Francois, P and others},
+  booktitle={MOLECULAR BIOLOGY OF THE CELL},
+  volume={24},
+  year={2013},
+  organization={AMER SOC CELL BIOLOGY 8120 WOODMONT AVE, STE 750, BETHESDA, MD 20814-2755 USA}
+}
