jackie revisions until methods

--- a/introduction.tex
+++ b/introduction.tex
@@ -62,18 +62,20 @@ Microtubules are constructed of alternating pairs, or heterdimers, of the globul
 Microtubule nucleation was thought to be the sole function of $\gamma$ tubulin for many years.However, evidence from budding yeast suggest that $\gamma$-tubulin might have additional functions in controlling microtubule properties ~\cite{vogel2000carboxy,vogel2001phosphorylation, cuschieri2006gamma, nazarova2013cdk1}. $\gamma$-tubulin bound to the spindle poles is phosphorylated in vivo at  8 sites ~\cite{vogel2001phosphorylation,keck2011cell}.
 Several functional studies following up on the finding that $\gamma$-tubulin is regulated show that mutations altering phosphorylation sites, all of which lie in IDRs, have consequences on the organization and stability of microtubules but no effect on their nucleation. This opens a relatively unexplored field of functional coupling where the $\gamma$-TuRC acts not only as a microtubule nucleator, but as a signal integration hub for regulating downstream events in microtubule organization.
 
-One phosphorylation site in γ-tubulin that has a important role in spindle function is the highly conserved  tyrosine  (Y)  445  which lies in the  disordered  carboxyl  terminal  tail  of γ-tubulin  (\gct). The \gct{} is defined as the final 35 residues in the C-terminal portion of $\gamma$-tubulin, which lies outside of the folded globular domain. The  γ-CT is essential for survival in budding yeast  ~\cite{vogel2000carboxy}. Substitution of an aspartic or glutamic acid (D/E) residue in the place of Y445 results  in slow growing cells with unstable  and misaligned mitotic  spindles ~\cite{vogel2001phosphorylation}. The Y445D/E substitutions are used as a means for constiuatively mimicking the electrostatic  environment  of a phosphate  group  by introducing  a negative  charge. Defects in spindle function observed in these mutants suggest that phosphorylation is limited to a specific stage of the cell cycle and/or subset of molecules. However, very little  is known about  the interactions and physical mechanisms that  phosphorylation  of  Y445 may control.   The  coupling of post-translational modifications  (PTMs) to the C-terminal  tails of tubulins  is well described in the $\gamma$-tubulin orthologues  $\alpha$ and $\beta$ tubulin.  Specific combinations  of PTMs  on the tubulin  tails act as a  \lq tubulin code \rq for selectively recruiting  motor  proteins  and  microtubule  associated  proteins to the microtubule  lattice.  A similar code has not yet been described for $\gamma$-tubulin despite evidence that  is is regulated \vivo.  While the functional importance  of phosphorylation and IDRs in γ-Tubulin is becoming increasingly clear, the physical mechanisms  by which local modifications  at  IDRs can have global impacts  on the large molecular machine remain unstudied.
+One phosphorylation site in γ-tubulin that has a important role in spindle function is the highly conserved  tyrosine  (Y)  445  which lies in the  disordered  carboxyl  terminal  tail  of γ-tubulin  (\gct). The \gct{} is defined as the final 35 residues in the C-terminal portion of $\gamma$-tubulin, which lies outside of the folded globular domain. The  γ-CT is essential for survival in budding yeast  ~\cite{vogel2000carboxy}. Substitution of an aspartic or glutamic acid (D/E) residue in the place of Y445 results  in slow growing cells with unstable  and misaligned mitotic  spindles ~\cite{vogel2001phosphorylation}. The Y445D/E substitutions are used as a means for constiuatively mimicking the electrostatic  environment  of a phosphate  group  by introducing  a negative  charge. Defects in spindle function observed in these mutants suggest that phosphorylation is limited to a specific stage of the cell cycle and/or subset of molecules. However, very little  is known about  the interactions and physical mechanisms that  phosphorylation  of  Y445 may control.   The  coupling of post-translational modifications  (PTMs) to the C-terminal  tails of tubulins  is well described in the $\gamma$-tubulin orthologues  $\alpha$ and $\beta$ tubulin.  Specific combinations  of PTMs  on the tubulin  tails act as a  \lq tubulin code \rq for selectively recruiting  motor  proteins  and  microtubule  associated  proteins to the microtubule  lattice.  A similar code has not yet been described for $\gamma$-tubulin despite evidence that  is is regulated \vivo.  While the functional importance  of phosphorylation and IDRs in $\gamma$-tubulin is becoming increasingly clear, the physical mechanisms  by which local modifications  at  IDRs can have global impacts  on the large molecular machine remain unstudied.
 
 
  \clearpage 
  
  \section{Experimental question}
  
-We hypothesize that the addition of a negative charge at the position Y445 (Y11 for the polypeptide in isolation) in the \gct alters the conformational sampling of the disordered tail in such a way as to be able to regulate the function of the complex.  
+We hypothesize that phosphorylation of the \gct IDR is a key event in the regulation of microtubule dynamics which allows cells precise control over the building of the mitotic spindle. Moreover we propose that such control is achieved via the local  addition of negative charge modulates the global dynamics and conformational sampling of the \gct.
+ 
  
  \section{Approach}
  
-In order to detect the rapid changes in conformational sampling, we use a powerful computational technique known as Molecular Dynamics (MD) simulations. We will be simulating the dynamics of two forms of the \gct: WT, and Y11D. We will perform simulations on the \gct in isolation as well as in the presence of the entire $\gamma$-Tubulin protein.
+
+In order to study changes in conformational sampling of the \gct, we use a powerful computational technique known as Molecular Dynamics (MD) simulations. We will be simulating the dynamics of two forms of the \gct: WT, and Y11D (Y445 in the full protein). We will perform simulations on the \gct in isolation as well as in the presence of the entire $\gamma$-Tubulin protein. Analysis of MD simulations will be guided and validated by NMR experiments on the same system performed by collaborators.
 
  
  
