--- a/methods.tex
+++ b/methods.tex
@@ -2,21 +2,21 @@
 \chapter{Theory \& Methods}
 \epigraph{Life can only be understood backwards; but it must be lived forwards.}{S{\o}ren Kierkegaard}
 
-The main technique we will use to study the behaviour of IDPs is the computational technique of Molecular Dynamics (MD) simulations ~\cite{haile1992molecular}. IDP dynamics are shaped by various types of physical interactions acting on a high number of conformational degrees of freedom all on a very fast timescale. For this reason it is difficult to predict the dynamics of IDPs {\it ab initio}. MD is a brute-force approach which iteratively solves the equations of motion for every interaction in a system of atoms in 3D space .  What results is a trajectory in space and a velocity for every atom in the system in time which we can use to visualize the conformational sampling of our IDP of interest and compute thermodynamic quantities. While this can be a computationally demanding task, it is currently the most reliable way of studying protein conformational sampling \silico and has been succesfully applied to many biomolecular systems ~\cite{karplus2002molecular}. We will use this approach to study the conformational dynamics of two isoforms of the \gct: WT, and Y11D.
+The main technique I will use to study the behaviour of IDPs/IDRs is the computational technique of Molecular Dynamics (MD) simulations ~\cite{haile1992molecular}. Protein dynamics are shaped by various types of physical interactions acting on a high number of conformational degrees of freedom on timescales ranging from femto to milli seconds. For this reason it is difficult to predict the dynamics, or compute ensemble quantities of IDPs {\it ab initio} . MD is a brute-force approach which iteratively solves the equations of motion for every interaction in a system of atoms in 3D space.  What results is a trajectory and a velocity for every atom in the system in time which we can use to visualize the conformational sampling of our IDP of interest and compute thermodynamic quantities. While this can be a computationally demanding task, it is currently the most reliable way of studying protein conformational sampling \silico and has been succesfully applied to many biomolecular systems ~\cite{karplus2002molecular}. We will use this approach to study the conformational dynamics of two isoforms of the \gct: WT, and Y11D.
 
 \section{Molecular Dynamics Simulations}
 
-We represent our system as a set of $N$ atoms represented as  vectors $R = \{\vek{r_1}, \vek{r_2}, ... , \vek{r_N}\}$ in three dimensional space. We then use classical Newtonian mechanics to obtain the changes in position of the particles as a function of time. For a peptide in solution, this would consist of the atoms in the peptide, and water atoms and the forces arising from interactions between all the particles in the system. 
+We represent our system as a set of $N$ atoms represented as  vectors $R = \{\vek{r_1}, \vek{r_2}, ... , \vek{r_N}\}$ in three dimensional space. We then use classical Newtonian mechanics to obtain the changes in position of the atoms as a function of time. For a peptide in solution, this system would consist of the atoms in the peptide, ions, water atoms, and the forces arising from interactions between them. 
 
 \subsection{Computing atomic trajectories}
 
-The central principle of MD is that the potential energy arising from interacting particles is a function of their positions in space. Since force is related to potential energy, it follows that the acceleration of the particles is a function of the potential energy, and so the motion of the particles can be obtained. Given a description of the potentials arising from interactions between the different atoms, which we call a force field, we can iterate through every atom in the system and calculate the force that would arise as a function of potential energy. The potential energy given by the force field can be written as $V(\vek{r_1}, \vek{r_2}, ..., \vek{r_N})$ is a function of the positions of each atom. Using the classical definition of force as $\vek{F} = m\vek{a}$, we can combine the positions of each atom with the force field to compute the force acting on each atom as follows.  
+MD is centered on the principle that the potential energy arising from interacting particles is a function of their positions in space. Given a function describing the potentials arising from interactions between the different atoms, which we call a force field, we can iterate through every atom in the system and calculate resulting forces as a function of potential energy. The potential energy given by the force field can be written as $V(\vek{r_1}, \vek{r_2}, ..., \vek{r_N})$ and is a function of the positions of each atom. Using the classical definition of force as $\vek{F} = m\vek{a}$, we can combine the positions of each atom with the force field to compute the force acting on each atom as follows.  
 
 \begin{equation}
 \vek{F_i}  = -\frac{\partial V(\vek{r_1}, \vek{r_2}, ..., \vek{r_i}, ... \vek{r_N)}}{\partial \vek{r_i}} 
  \end{equation}
  \todo{fix this}
- Given that the force on an atom is the result of interactions with all other atoms in the system, we obtain the force on a particular atom as the sum of the force of the interactions with all other atoms $j$ in the system. So we get $\vek{F_i} = \sum_{j} \vek{F_{ij}}$ Given the total force on an atom, we can compute its trajectory in space by numerically integrating Newton's equations of motion. This process is repeated and trajectories are stored and updated for the desired number of steps in the simulation.
+ Given that the force on an atom is the result of interactions with all other atoms in the system, we obtain the force on a particular atom as the sum of the force of the interactions with all other atoms $j$ in the system,  $\vek{F_i} = \sum_{j} \vek{F_{ij}}$ Given the total force on an atom, we can compute its trajectory in space by numerically integrating Newton's equations of motion. This process is repeated and trajectories are stored and updated for the desired number of steps in the simulation.
  
  \begin{equation}
  \frac{\partial^2 \vek{r_{i}}}{\partial t^2} = \frac{\vek{F_i}}{m_i}
@@ -32,18 +32,18 @@ E_{total} = E_{bonded} + E_{non bonded}
 
 The bonded energy term can be written as the sum of energies arising from the bond itself  ($E_{bond}$)which is a function of the bond length, the potential arising from the angle formed by the bond ($E_{angle}$), as well as the torsional/dihedral angle ($E_{dihedral}$) arising from the rotation of three bonds about two intersecting planes.
 
-Non-bonded interactions can have two contributing factors; electrostatic force, and van der Waals force. The electrostatic potential ($E_{electrostatic}$) arises from the interaction of the charges of particles, while the van der Waals potential  ($E_{van der Waals}$ arises from the attraction or repulsion between uncharged groups. In most systems, non-bonded interactions by far outnumber bonded interactions and thus carry most of the computational weight in an MD simulation. in m Combining all of these terms, we can write the full description of forces in the system as:
+Non-bonded interactions can have two contributing factors; electrostatic force, and van der Waals force. The electrostatic potential ($E_{electrostatic}$) arises from the interaction of the charges of particles, while the van der Waals potential  ($E_{van der Waals}$ arises from the attraction or repulsion between uncharged groups. Combining all of these terms, we can write the full description of forces in the system as:
 
 \begin{equation}
-E_{total} = E_{bond} + E_{angle} + E_{dihedral} + E_{van der Waals} + E_{electrostatic} 
+E(r_{N}) = E_{bond} + E_{angle} + E_{dihedral} + E_{van der Waals} + E_{electrostatic} 
 \end{equation}
 \begin{equation}
 E(r_{N}) = \sum_{bonds} K_{r} (r - r_{0})^2	 + \sum_{angles} k_{\theta} (\theta - \theta_0) + \sum_{dihedrals} K_{\phi} (1 + cos(n\phi - \delta)) + \sum_{i,j} \{ 4\epsilon_{i,j} \frac{\sigma_{ij}}{r_{ij}} \}
 \end{equation}
 
-The MD algorithm evaluates $E(r_{N})$ at every time step to obtain the force on each atom and therefore the trajectory at each time step. Given such a fine-grain level of modelling, this process is the most time costly step in an MD simulation. However, an important advantage to such a low level description of the system is that more complex phenomena such as the hydrophobic effect and hydrogen bonding which are known to be essential to protein dynamics do not need to be coded explicitly in the models. Instead, they arise naturally from this definition of the system.
+The MD algorithm evaluates $E(r_{N})$ at every time step to obtain the force on each atom and therefore the trajectory at each time step. Given this low-level description of the system, more complex phenomena such as the hydrophobic effect and hydrogen bonding which are known to be essential to protein dynamics do not need to be coded explicitly in the models. Instead, they arise naturally from the definition of the system.
 
-Another key component to the force field, is the definition of parameters for the different types of interactions and particles in the system. Parameters can include values for charge, mass, bond length, etc. These are often obtained from experimental measurements. The force field must naturally also contain a set of definitions for the various types of atoms and functional groups it can model. Therefore, the choice of force field can have important consequences on the outcome of the simulations and must be chosen with care.
+Another key component to the force field, is the definition of parameters for the different types of interactions and particles in the system. Key parameters include values for charge, mass, bond length, etc, and are often obtained from experimental measurements. The force field must naturally also contain a set of definitions for the various types of atoms and functional groups it can model. Therefore, the choice of force field can have important consequences on the outcome of the simulations and must be chosen with care.
 
 In this work, we will be using the Optimized Potentials for Liquid Simulations - All Atom (OPLS-AA) force field ~\cite{jorgensen1988opls}.
 
