--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -587,3 +587,96 @@
   year={2013},
   organization={AMER SOC CELL BIOLOGY 8120 WOODMONT AVE, STE 750, BETHESDA, MD 20814-2755 USA}
 }
+
+@article{jorgensen1996development,
+  title={Development and testing of the OPLS all-atom force field on conformational energetics and properties of organic liquids},
+  author={Jorgensen, William L and Maxwell, David S and Tirado-Rives, Julian},
+  journal={Journal of the American Chemical Society},
+  volume={118},
+  number={45},
+  pages={11225--11236},
+  year={1996},
+  publisher={ACS Publications}
+}
+
+@article{good1970new,
+  title={New combining rule for intermolecular distances in intermolecular potential functions},
+  author={Good, Robert J and Hope, Christopher J},
+  journal={The Journal of Chemical Physics},
+  volume={53},
+  number={2},
+  pages={540--543},
+  year={1970},
+  publisher={AIP Publishing}
+}
+@book{kukol2008molecular,
+  title={Molecular modeling of proteins},
+  author={Kukol, Andreas and others},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{vitalis2009absinth,
+  title={ABSINTH: A new continuum solvation model for simulations of polypeptides in aqueous solutions},
+  author={Vitalis, Andreas and Pappu, Rohit V},
+  journal={Journal of computational chemistry},
+  volume={30},
+  number={5},
+  pages={673--699},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{henriques2015molecular,
+  title={Molecular dynamics simulations of intrinsically disordered proteins: Force field evaluation and comparison with experiment},
+  author={Henriques, João and Cragnell, Carolina and Skepö, Marie},
+  journal={Journal of chemical theory and computation},
+  volume={11},
+  number={7},
+  pages={3420--3431},
+  year={2015},
+  publisher={ACS Publications}
+}
+
+@article{tran2008role,
+  title={Role of Backbone- Solvent Interactions in Determining Conformational Equilibria of Intrinsically Disordered Proteins},
+  author={Tran, Hoang T and Mao, Albert and Pappu, Rohit V},
+  journal={Journal of the American Chemical Society},
+  volume={130},
+  number={23},
+  pages={7380--7392},
+  year={2008},
+  publisher={ACS Publications}
+}
+
+@article{onufriev2008implicit,
+  title={Implicit solvent models in molecular dynamics simulations: A brief overview},
+  author={Onufriev, Alexey},
+  journal={Annual Reports in Computational Chemistry},
+  volume={4},
+  pages={125--137},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{arnold1994evaluation,
+  title={An evaluation of implicit and explicit solvent model systems for the molecular dynamics simulation of bacteriophage T4 lysozyme},
+  author={Arnold, Gregory E and Ornstein, Rick L},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={18},
+  number={1},
+  pages={19--33},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
+@article{zhou2003free,
+  title={Free energy landscape of protein folding in water: explicit vs. implicit solvent},
+  author={Zhou, Ruhong},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={53},
+  number={2},
+  pages={148--161},
+  year={2003},
+  publisher={Wiley Online Library}
+}
