--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage[labelfont=bf]{caption}
+\usepackage{amsmath}
 
 
 \graphicspath{{figures/}}
