body captions done

--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -680,3 +680,36 @@
   year={2003},
   publisher={Wiley Online Library}
 }
+
+@article{massi2004nmr,
+  title={NMR R 1$\rho$ rotating-frame relaxation with weak radio frequency fields},
+  author={Massi, Francesca and Johnson, Eric and Wang, Chunyu and Rance, Mark and Palmer, Arthur G},
+  journal={Journal of the American Chemical Society},
+  volume={126},
+  number={7},
+  pages={2247--2256},
+  year={2004},
+  publisher={ACS Publications}
+}
+
+@article{stafford2015conformational,
+  title={Conformational preferences underlying reduced activity of a thermophilic ribonuclease H},
+  author={Stafford, Kate A and Trbovic, Nikola and Butterwick, Joel A and Abel, Robert and Friesner, Richard A and Palmer, Arthur G},
+  journal={Journal of molecular biology},
+  volume={427},
+  number={4},
+  pages={853--866},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{henzler2007dynamic,
+  title={Dynamic personalities of proteins},
+  author={Henzler-Wildman, Katherine and Kern, Dorothee},
+  journal={Nature},
+  volume={450},
+  number={7172},
+  pages={964--972},
+  year={2007},
+  publisher={Nature Publishing Group}
+}
